--- a/src/main/resources/MainInterface.fxml
+++ b/src/main/resources/MainInterface.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
@@ -18,6 +23,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.collections.FXCollections?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -36,13 +42,16 @@
           </Menu>
         </menus>
       </MenuBar>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+      <AnchorPane prefHeight="290.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
             <Accordion fx:id="acInputPanes" layoutX="71.0" layoutY="65.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <panes>
                 <TitledPane fx:id="tpGeneral" animated="false" text="General">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <padding>
+                              <Insets bottom="5" left="5" right="5" top="5" />                 
+                           </padding>
                            <children>
                               <GridPane AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columnConstraints>
@@ -99,6 +108,9 @@
                 <TitledPane fx:id="tpDescription" animated="false" text="Description">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <padding>
+                              <Insets bottom="5" left="5" right="5" top="5" />                 
+                           </padding>
                            <children>
                               <TextArea fx:id="taDescription" layoutX="14.0" layoutY="-52.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
@@ -108,25 +120,95 @@
                 <TitledPane fx:id="tpDirections" animated="false" text="Directions">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <padding>
+                              <Insets bottom="5" left="5" right="5" top="5" />                 
+                           </padding>
                            <children>
                               <TextArea fx:id="taDirections" layoutX="32.0" layoutY="-45.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
                   </content>
                 </TitledPane>
+                  <TitledPane animated="false" text="Advanced">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0">
+                           <padding>
+                              <Insets bottom="5" left="5" right="5" top="5" />                 
+                           </padding>
+                           <children>
+                              <GridPane layoutX="23.0" layoutY="14.0" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="439.0" minWidth="10.0" prefWidth="429.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints fillHeight="false" minHeight="10.0" valignment="CENTER" vgrow="NEVER" />
+                                  <RowConstraints minHeight="10.0" valignment="CENTER" />
+                                  <RowConstraints minHeight="10.0" valignment="CENTER" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="Inline question images?" />
+                                    <Label text="Inline response images?" GridPane.rowIndex="1" />
+                                    <ChoiceBox fx:id="cbxInlineQImgs" prefWidth="150.0" GridPane.columnIndex="1" value="No">
+                                       <items>
+                                          <FXCollections fx:factory="observableArrayList">
+                                                <String fx:value="Yes" />
+                                                <String fx:value="No" />
+                                          </FXCollections>
+                                       </items>
+                                    </ChoiceBox>
+                                    <ChoiceBox fx:id="cbxInlineRImgs" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" value="No">
+                                       <items>
+                                          <FXCollections fx:factory="observableArrayList">
+                                                <String fx:value="Yes" />
+                                                <String fx:value="No" />
+                                          </FXCollections>
+                                       </items>                                    
+                                    </ChoiceBox>
+                                    <Label text="Randomize response order?" GridPane.rowIndex="2" />
+                                    <ChoiceBox fx:id="cbxRandomResp" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" value="Yes">
+                                       <items>
+                                          <FXCollections fx:factory="observableArrayList">
+                                                <String fx:value="Yes" />
+                                                <String fx:value="No" />
+                                          </FXCollections>
+                                       </items>                                     
+                                    </ChoiceBox>
+                                 </children>
+                              </GridPane>
+                           </children>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </AnchorPane>
+                    </content>
+                  </TitledPane>
               </panes>
             </Accordion>
          </children>
       </AnchorPane>
-      <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="200.0">
-         <children>
-            <ScrollPane fx:id="spLogScroller" fitToWidth="true" prefHeight="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-              <content>
-                <AnchorPane fx:id="apLogOutputBox" minHeight="0.0" minWidth="0.0" prefHeight="200.0" />
-              </content>
-            </ScrollPane>
-         </children>
-      </AnchorPane>
+      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Conversion Log">
+               <content>
+                  <AnchorPane maxHeight="-Infinity">
+                     <children>
+                        <ScrollPane fx:id="spLogScroller" fitToWidth="true" prefHeight="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <content>
+                            <AnchorPane fx:id="apLogOutputBox" minHeight="0.0" minWidth="0.0" prefHeight="200.0">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </AnchorPane>
+                          </content>
+                        </ScrollPane>
+                     </children>
+                  </AnchorPane>
+               </content>
+          </Tab>
+        </tabs>
+      </TabPane>
       <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="200.0">
          <children>
             <HBox alignment="CENTER" layoutX="145.0" layoutY="-36.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
