--- a/src/main/resources/MainInterface.fxml
+++ b/src/main/resources/MainInterface.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
@@ -23,7 +24,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.collections.FXCollections?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -150,7 +150,7 @@
                                  <children>
                                     <Label text="Inline question images?" />
                                     <Label text="Inline response images?" GridPane.rowIndex="1" />
-                                    <ChoiceBox fx:id="cbxInlineQImgs" prefWidth="150.0" GridPane.columnIndex="1" value="No">
+                                    <ChoiceBox fx:id="cbxInlineQImgs" disable="true" prefWidth="150.0" value="No" GridPane.columnIndex="1">
                                        <items>
                                           <FXCollections fx:factory="observableArrayList">
                                                 <String fx:value="Yes" />
@@ -158,7 +158,7 @@
                                           </FXCollections>
                                        </items>
                                     </ChoiceBox>
-                                    <ChoiceBox fx:id="cbxInlineRImgs" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" value="No">
+                                    <ChoiceBox fx:id="cbxInlineRImgs" prefWidth="150.0" value="No" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                        <items>
                                           <FXCollections fx:factory="observableArrayList">
                                                 <String fx:value="Yes" />
@@ -167,7 +167,7 @@
                                        </items>                                    
                                     </ChoiceBox>
                                     <Label text="Randomize response order?" GridPane.rowIndex="2" />
-                                    <ChoiceBox fx:id="cbxRandomResp" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" value="Yes">
+                                    <ChoiceBox fx:id="cbxRandomResp" prefWidth="150.0" value="Yes" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                        <items>
                                           <FXCollections fx:factory="observableArrayList">
                                                 <String fx:value="Yes" />
